# qml-cpp-integration-example

./: CMakeLists.txt  README.md  TrafficLightClass.cpp  TrafficLightClass.h  TrafficLightQml.qml  TrafficLightQmlControlButtons.qml  main.cpp  main.qml  qml.qrc
